--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
 
   <!-- FOOTER -->
   <footer class="footer">
-    <p>© 2026 InfoVibe • Projeto fictício para portfólio | Desenvolvido por <a href="https://github.com/yasmim-bernardo" target="_blank">Yasmim Bernardo</a> </p>
+    <p>© 2026 InfoVibe • Projeto fictício para portfólio | Desenvolvido por <a href="https://github.com/yasmim-bernardo" target="_blank" rel="noopener">Yasmim Bernardo</a> </p>
   </footer>
 
   <!-- JS -->
-  <script src="js/script.js"></script>
+  <script src="frontend/js/script.js"></script>
 
 </body>
 </html>
